// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":false,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Admin</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":false,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":true,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Admin</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":true,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":false,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":false,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":true,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":true,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":false,"clickable":false,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Read-only</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":false,"clickable":false,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":false,"clickable":true,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Read-only</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":false,"clickable":true,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":true,"clickable":false,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":true,"clickable":false,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":true,"clickable":true,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"READ","showRoleOptions":true,"clickable":true,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":false,"clickable":false,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Write</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":false,"clickable":false,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":false,"clickable":true,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Write</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":false,"clickable":true,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":true,"clickable":false,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":true,"clickable":false,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":true,"clickable":true,"isPrimaryUser":false,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for repo: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"WRITE","showRoleOptions":true,"clickable":true,"isPrimaryUser":true,"isRepo":true} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":false,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Administrator</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":false,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":true,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Administrator</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":false,"clickable":true,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":false,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":false,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-juniper\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":true,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"ADMIN","showRoleOptions":true,"clickable":true,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-juniper\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":false,"clickable":false,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Contributor</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":false,"clickable":false,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":false,"clickable":true,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Contributor</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":false,"clickable":true,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":true,"clickable":false,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":true,"clickable":false,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-juniper\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":true,"clickable":true,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"CONTRIBUTOR","showRoleOptions":true,"clickable":true,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-juniper\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":false,"clickable":false,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Member</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":false,"clickable":false,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":false,"clickable":true,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Member</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":false,"clickable":true,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-vanilla-200\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":true,"clickable":false,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":true,"clickable":false,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-juniper\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":true,"clickable":true,"isPrimaryUser":false,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <zmenu-stub direction=\\"left\\" placement=\\"bottom\\" size=\\"base\\" width=\\"large\\" bodyspacing=\\"\\" triggerlabel=\\"Menu\\"> <template></template></zmenu-stub>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;

exports[`renders MemberListItem with all prop options for team: {"avatar":"/static/dashboard/images/empty-avatar.svg","dateJoined":"2019-02-01T07:55:15.466139+00:00","email":"root@deepsource.io","fullName":"Duck Norris","id":"VXNlcjpseGJhbWI=","role":"MEMBER","showRoleOptions":true,"clickable":true,"isPrimaryUser":true,"isRepo":false} 1`] = `
"<li class=\\"flex items-center py-2 space-x-3 text-sm\\">
  <div>
    <zavatar-stub type=\\"link\\" image=\\"/static/dashboard/images/empty-avatar.svg\\" username=\\"Duck Norris\\" size=\\"md\\" stroke=\\"bg-ink-300 p-0.5\\"></zavatar-stub>
  </div>
  <div class=\\"items-center w-1/2 space-y-1 leading-none text-vanilla-100\\">
    <div>Duck Norris</div>
    <div class=\\"text-xs text-vanilla-400\\">root@deepsource.io</div>
  </div>
  <div class=\\"flex items-center justify-end flex-grow\\">
    <div class=\\"text-right\\">
      <div class=\\"text-juniper\\">Owner</div>
      <div class=\\"text-xs text-vanilla-400\\">since Feb 1, 2019</div>
    </div>
  </div>
</li>"
`;
